--- a/packages/elements/src/components/ino-chip/ino-chip.scss
+++ b/packages/elements/src/components/ino-chip/ino-chip.scss
@@ -3,16 +3,17 @@
 @use '@material/chips/styles';
 @use '../base/new-theme' as theme;
 
-$border-focused: rgba(45, 93, 255, 0.3);
+$border-focused: theme.$primary-focus;
 
 $chip-outlined-color-enabled: transparent;
-$chip-outlined-color-hover: #e8edff;
+$chip-outlined-color-hover: theme.$p-1;
 
-$chip-solid-color-enabled: #e8edff;
-$chip-solid-color-hover: #d7e0fe;
+$chip-solid-color-enabled: theme.$p-2;
+$chip-solid-color-hover: theme.$p-3;
+$chip-solid-font-color-hover: theme.$p-6;
 
-$chip-color-focus: #2d5dff4d;
-$chip-color-font: theme.$primary;
+$chip-color-focus: theme.$primary-focus;
+$chip-color-font: theme.$p-5;
 
 $icon-size: 16px;
 
@@ -28,13 +29,14 @@ ino-chip {
     width: inherit;
     height: inherit;
     @include chips.ripple-color(transparent);
-    @include chips.trailing-action-color(theme.$primary);
+    @include chips.trailing-action-color(theme.$p-5);
     @include chips.trailing-action-ripple-size(0px);
-    @include chips.text-label-color(theme.$primary);
-    @include chips.icon-color(theme.$primary);
-    @include chips.checkmark-color(theme.$primary);
+    @include chips.text-label-color(theme.$p-5);
+    @include chips.icon-color(theme.$p-5);
+    @include chips.checkmark-color(theme.$p-5);
     @include chips.height(inherit);
     @include chips.shape-radius(100%);
+    @include chips.text-label-color($chip-color-font);
     transition: ease-in-out 0.15s;
 
     .ino-chip-leading-icon {
@@ -77,10 +79,10 @@ ino-chip {
     @include chips.outline-style(solid);
     @include chips.outline-width(1px);
     @include chips.container-color($chip-outlined-color-enabled);
-    @include chips.outline-color(theme.$primary);
+    @include chips.outline-color(theme.$p-5);
 
     ino-icon {
-      --icon-color: #{theme.$primary};
+      --icon-color: #{theme.$p-5};
     }
 
     &:hover,
@@ -94,12 +96,13 @@ ino-chip {
     @include chips.container-color($chip-solid-color-enabled);
 
     ino-icon {
-      --icon-color: theme.$primary;
+      --icon-color: theme.$p-5;
     }
 
     &:hover,
     &:focus {
       @include chips.container-color($chip-solid-color-hover);
+      @include chips.text-label-color($chip-solid-font-color-hover);
     }
   }
 
