--- a/packages/elements/src/components/ino-datepicker/ino-datepicker.scss
+++ b/packages/elements/src/components/ino-datepicker/ino-datepicker.scss
@@ -1,9 +1,8 @@
 @use '../base/typography';
-@use '../base/theme';
+@use '../base/new-theme' as theme;
 @import '~flatpickr/dist/flatpickr';
 @import '~flatpickr/dist/plugins/monthSelect/style';
 
-$light-blue: #d0d0e6; // rgba(theme.color(primary), 0.1);
 $padding-vertical: 12px;
 $padding-horizontal: 24px;
 
@@ -24,11 +23,11 @@ ino-datepicker {
 
 // Customize flatpickr styles
 
-$hover-color: lighten(theme.color(primary), 36.5%);
+$hover-color: theme.$p-3;
 
 .flatpickr-calendar {
   @include typography.font(sans-serif, s, regular);
-  box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 20px 0 rgba(theme.$n-10, 0.35);
   border-radius: 0 6px 6px 6px;
   margin-top: 4px;
 
@@ -73,7 +72,7 @@ $hover-color: lighten(theme.color(primary), 36.5%);
   padding: 0 20px 0 6px;
   margin-bottom: 10px;
   border-radius: 24px;
-  // background-color: theme.$light-blue;
+  // background-color: theme.theme.$n-3;
   width: 100%;
 
   .flatpickr-month {
@@ -101,7 +100,7 @@ $hover-color: lighten(theme.color(primary), 36.5%);
 
     --ino-icon-height: 12px;
     --ino-icon-width: 12px;
-    --ino-icon-color: #{theme.color(primary)};
+    --ino-icon-color: #{theme.$p-5};
   }
 }
 
@@ -140,28 +139,28 @@ $hover-color: lighten(theme.color(primary), 36.5%);
 
   // Text color
   &:not(.flatpickr-disabled)#{$notSelected} {
-    color: theme.color(dark);
+    color: theme.$n-7;
   }
 
   &.nextMonthDay:not(.flatpickr-disabled)#{$notSelected},
   &.prevMonthDay:not(.flatpickr-disabled)#{$notSelected} {
-    color: theme.color(dark, light);
+    color: theme.$n-4;
   }
 
   &:hover:not(.flatpickr-disabled)#{$notSelected},
   &:focus:not(.flatpickr-disabled)#{$notSelected} {
-    color: theme.color(primary);
-    background-color: $light-blue;
-    border-color: $light-blue;
+    color: theme.$p-5;
+    background-color: theme.$n-3;
+    border-color: theme.$n-3;
   }
 
   // Today
   &.today:not(.flatpickr-disabled)#{$notSelected} {
-    color: theme.color(primary);
+    color: theme.$p-5;
     // Only add border if its not in a range
     // (provides problems with the background color logic of flatpickr)
     &:not(.inRange) {
-      border: 1px solid theme.color(primary);
+      border: 1px solid theme.$p-5;
     }
   }
 
@@ -171,8 +170,8 @@ $hover-color: lighten(theme.color(primary), 36.5%);
   &.endRange:hover,
   &.startRange,
   &.startRange:hover {
-    background-color: theme.color(primary);
-    border-color: theme.color(primary);
+    background-color: theme.$p-5;
+    border-color: theme.$p-5;
     color: white;
     font-weight: typography.font-weight(semibold);
     line-height: $size;
@@ -180,14 +179,14 @@ $hover-color: lighten(theme.color(primary), 36.5%);
 
   // Background within a range
   &.inRange:not(.selected) {
-    border-color: $light-blue;
-    background-color: $light-blue;
-    box-shadow: -12px 0 0 $light-blue, 12px 0 0 $light-blue;
+    border-color: theme.$n-3;
+    background-color: theme.$n-3;
+    box-shadow: -12px 0 0 theme.$n-3, 12px 0 0 theme.$n-3;
   }
 
   &.selected.startRange + .endRange:not(:nth-child(7n + 1)),
   &.startRange.startRange + .endRange:not(:nth-child(7n + 1)) {
-    box-shadow: -12px 0 0 $light-blue;
+    box-shadow: -12px 0 0 theme.$n-3;
   }
 }
 
@@ -208,19 +207,19 @@ $hover-color: lighten(theme.color(primary), 36.5%);
     align-items: center;
 
     &.selected {
-      background-color: theme.color(primary);
-      border-color: theme.color(primary);
+      background-color: theme.$p-5;
+      border-color: theme.$p-5;
       font-weight: typography.font-weight(semibold);
       color: white;
     }
 
     &.today {
-      border-color: theme.color(primary);
-      color: theme.color(primary);
+      border-color: theme.$p-5;
+      color: theme.$p-5;
     }
 
     &:hover:not(.selected) {
-      background-color: $light-blue;
+      background-color: theme.$n-3;
     }
   }
 }
