--- a/packages/elements/src/components/ino-input/ino-input.scss
+++ b/packages/elements/src/components/ino-input/ino-input.scss
@@ -6,7 +6,7 @@
 @use '@material/floating-label/mdc-floating-label';
 @use '@material/floating-label';
 @use '@material/notched-outline/mdc-notched-outline';
-@use '../base/theme';
+@use '../base/new-theme' as theme;
 @use '../base/typography';
 
 $default-text-field: 'not(.mdc-text-field--outlined):not(.mdc-text-field--textarea)';
@@ -63,10 +63,10 @@ ino-input {
    * @prop --ino-input-icon-color: icon color
    */
   --input-color: var(--ino-input-color, #{textfield.$ink-color});
-  --input-caret-color: var(--ino-input-caret-color, #{theme.color(primary)});
-  --input-label-color: var(--ino-input-label-color, #{theme.color(primary)});
-  --input-line-color: var(--ino-input-line-color, #{theme.color(primary)});
-  --input-icon-color: var(--ino-input-icon-color, #{theme.color(primary)});
+  --input-caret-color: var(--ino-input-caret-color, #{theme.$p-5});
+  --input-label-color: var(--ino-input-label-color, #{theme.$p-5});
+  --input-line-color: var(--ino-input-line-color, #{theme.$p-5});
+  --input-icon-color: var(--ino-input-icon-color, #{theme.$p-5});
 
   display: block;
   @include icon.icon-core-styles;
@@ -107,8 +107,8 @@ ino-input {
   }
 
   .mdc-text-field--invalid {
-    @include textfield.label-color(theme.color(error));
-    @include setIconColors(theme.color(error));
+    @include textfield.label-color(theme.$error);
+    @include setIconColors(theme.$error);
   }
 
   :not(.mdc-text-field--disabled) {
@@ -127,7 +127,7 @@ ino-input .mdc-text-field--filled {
   @include textfield.line-ripple-color(var(--input-line-color));
 
   &.mdc-text-field--invalid {
-    @include textfield.line-ripple-color(theme.color(error));
+    @include textfield.line-ripple-color(theme.$error);
   }
 
   &:not([class*='--with-leading-icon']) {
@@ -189,7 +189,7 @@ ino-input .mdc-text-field--outlined {
   }
 
   &.mdc-text-field--invalid {
-    @include textfield.focused-outline-color(theme.color(error));
+    @include textfield.focused-outline-color(theme.$error);
   }
 
   &[class*='--with-leading-icon']
