--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -1,5 +1,4 @@
-@use '../base/theme';
-@use '../base/new-theme' as new_theme;
+@use '../base/new-theme' as theme;
 @use '@material/textfield';
 
 /**
@@ -15,7 +14,7 @@
 }
 
 .ino-dialog-delete ino-icon {
-  --ino-icon-button-icon-color: #{new_theme.$error};
+  --ino-icon-button-icon-color: #{theme.$error};
 }
 
 .ino-dialog-form {
@@ -48,7 +47,7 @@ ino-markdown-editor {
   .markdown-editor__error-text {
     display: block;
     padding: 10px;
-    color: theme.color(error, dark);
+    color: theme.$error;
   }
 
   .markdown-editor__toolbar {
@@ -56,13 +55,13 @@ ino-markdown-editor {
     grid-template-columns: auto auto;
     justify-content: space-between;
     border-radius: $border-radius;
-    background-color: lighten(theme.color(light), 22%);
+    background-color: theme.$n-1;
     padding: 10px 20px;
     margin-bottom: 10px;
   }
 
   .toolbar__action-button {
-    --ino-icon-color-primary: #{theme.color(dark, light)};
+    --ino-icon-color-primary: #{theme.$n-9};
     border: 0;
     margin: 0;
     padding: 1px 2px;
@@ -70,18 +69,15 @@ ino-markdown-editor {
     background-color: transparent;
     font-size: 22px;
 
-    &:hover {
-      --ino-icon-color-primary: #{theme.color(primary, dark)};
-      background-color: rgba(theme.color(primary, dark), 0.1);
-      color: theme.color(primary, dark);
+    &:hover, &--active {
+      --ino-icon-color-primary: #{theme.$p-6};
+      background-color:  theme.$p-2;
+      color: theme.$p-6;
       cursor: pointer;
     }
 
     &--active {
-      --ino-icon-color-primary: #{theme.color(primary, dark)};
-      background-color: rgba(theme.color(primary, dark), 0.1);
-      color: theme.color(primary, dark);
-      box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16);
+      box-shadow: inset 0 3px 6px rgba(theme.$p-7, 0.16);
     }
 
     ino-icon {
@@ -125,8 +121,8 @@ ino-markdown-editor {
       height: 100%;
 
       .mdc-text-field--textarea.mdc-text-field--outlined {
-        @include textfield.outline-color(theme.color(light, light));
-        @include textfield.hover-outline-color(theme.color(light, dark));
+        @include textfield.outline-color(theme.$n-2);
+        @include textfield.hover-outline-color(theme.$n-4);
 
         display: flex;
         .mdc-text-field__input {
@@ -150,14 +146,14 @@ ino-markdown-editor {
     min-height: var(--ino-markdown-editor-min-height, 100px);
     padding: 15px;
     border-radius: 4px;
-    border: 1px solid theme.color(light, light);
+    border: 1px solid theme.$n-2;
     color: rgba(0, 0, 0, 0.87);
 
     &:hover:not(&-focused) {
-      border-color: theme.color(light, dark);
+      border-color: theme.$n-4;
     }
     &-focused {
-      outline: theme.color(primary) auto 1px;
+      outline: theme.$p-5 auto 1px;
     }
 
     *:first-child {
@@ -171,7 +167,7 @@ ino-markdown-editor {
 
     blockquote {
       padding-left: 10px;
-      border-left: 3px solid theme.color(light);
+      border-left: 3px solid theme.$n-3;
     }
 
     p {
@@ -181,7 +177,7 @@ ino-markdown-editor {
 
     pre code {
       display: block;
-      background-color: rgba(theme.color(light), $alpha: 0.15);
+      background-color: rgba(theme.$n-3, 0.15);
       white-space: pre;
       -webkit-overflow-scrolling: touch;
       overflow-x: auto;
@@ -215,7 +211,7 @@ ino-markdown-editor {
         }
 
         input[type='checkbox'] {
-          accent-color: theme.color(primary);
+          accent-color: theme.$p-5;
         }
       }
     }
