--- a/packages/elements/src/components/ino-spinner/ino-spinner.scss
+++ b/packages/elements/src/components/ino-spinner/ino-spinner.scss
@@ -1,4 +1,4 @@
-@use '../base/theme';
+@use '../base/new-theme' as theme;
 
 // Import the different spinner styles
 @use './mixins/bounce';
@@ -30,7 +30,7 @@ ino-spinner {
     position: relative;
   }
 
-  @include set-spinner-color(theme.color(primary));
+  @include set-spinner-color(theme.$p-5);
 
   // Modal
   &.ino-spinner--modal {
@@ -41,7 +41,7 @@ ino-spinner {
     width: 100%;
     height: 100%;
 
-    background: rgba(255, 255, 255, 0.95);
+    background: rgba(theme.$white, 0.95);
 
     .ino-spinner__composer {
       top: 50%;
