--- a/packages/elements/src/components/ino-textarea/ino-textarea.scss
+++ b/packages/elements/src/components/ino-textarea/ino-textarea.scss
@@ -10,18 +10,9 @@ ino-textarea {
    * @prop --ino-textarea-caret-color: color of the caret
    * @prop --ino-textarea-label-color: color of the label
    */
-  --textarea-outline-color: var(
-    --ino-textarea-outline-color,
-    #{theme.$p-5}
-  );
-  --textarea-caret-color: var(
-    --ino-textarea-caret-color,
-    #{theme.$p-5}
-  );
-  --textarea-label-color: var(
-    --ino-textarea-label-color,
-    #{theme.$p-5}
-  );
+  --textarea-outline-color: var(--ino-textarea-outline-color, #{theme.$p-5});
+  --textarea-caret-color: var(--ino-textarea-caret-color, #{theme.$p-5});
+  --textarea-label-color: var(--ino-textarea-label-color, #{theme.$p-5});
 }
 
 ino-textarea {
