--- a/packages/elements/src/components/ino-textarea/ino-textarea.scss
+++ b/packages/elements/src/components/ino-textarea/ino-textarea.scss
@@ -2,7 +2,7 @@
 @use '@material/textfield/mdc-text-field';
 @use '@material/floating-label/mdc-floating-label';
 @use '@material/textfield';
-@use '../base/theme';
+@use '../base/new-theme' as theme;
 
 ino-textarea {
   /**
@@ -10,18 +10,9 @@ ino-textarea {
    * @prop --ino-textarea-caret-color: color of the caret
    * @prop --ino-textarea-label-color: color of the label
    */
-  --textarea-outline-color: var(
-    --ino-textarea-outline-color,
-    #{theme.color(primary)}
-  );
-  --textarea-caret-color: var(
-    --ino-textarea-caret-color,
-    #{theme.color(primary)}
-  );
-  --textarea-label-color: var(
-    --ino-textarea-label-color,
-    #{theme.color(primary)}
-  );
+  --textarea-outline-color: var(--ino-textarea-outline-color, #{theme.$p-5});
+  --textarea-caret-color: var(--ino-textarea-caret-color, #{theme.$p-5});
+  --textarea-label-color: var(--ino-textarea-label-color, #{theme.$p-5});
 }
 
 ino-textarea {
