--- a/packages/elements/src/components/ino-tab/ino-tab.scss
+++ b/packages/elements/src/components/ino-tab/ino-tab.scss
@@ -2,26 +2,40 @@
 @use '@material/tab/mdc-tab';
 @use '@material/tab';
 @use '@material/tab-indicator/mdc-tab-indicator';
-@use '../base/theme';
+@use '@material/ripple';
+@use '../base/new-theme' as theme;
 @use '../base/typography';
 
 ino-tab {
   .mdc-tab {
     @include typography.font(sans-serif, s, regular);
-    @include tab.active-text-label-color(theme.color(primary));
-    @include tab.active-states-color(theme.color(primary));
-    @include tab.states-color(theme.color(primary));
+    @include tab.active-text-label-color(theme.$p-5);
+    @include tab.active-states-color(theme.$transparent);
+    @include tab.states-color(theme.$transparent);
+
+    // new ripple because a lower opacity on theme.$p-5 as base color looks to violet
+    @include ripple.surface;
+    @include ripple.radius-bounded;
+    @include ripple.states-base-color(theme.$p-2);
+    @include ripple.states-opacities(
+      (
+        hover: 0.5,
+        focus: 0.8,
+        press: 0.8,
+      )
+    );
+    overflow: hidden;
 
     ino-icon {
-      --icon-color: buttontext;
+      --icon-color: #{theme.$p-5};
     }
 
     &.mdc-tab--active ino-icon {
-      --icon-color: #{theme.color(primary)};
+      --icon-color: #{theme.$p-5};
     }
 
     .mdc-tab-indicator__content--underline {
-      border-color: theme.color(primary);
+      border-color: theme.$p-5;
     }
   }
 
