--- a/packages/test-app/components/ino-segment-button.html
+++ b/packages/test-app/components/ino-segment-button.html
@@ -1,2 +1,16 @@
 <script type="module" src="/src/main.ts"></script>
-<ino-segment-button>My Button</ino-segment-button>
+<script type="module" src="ino-segment-button-template.js"></script>
+
+<my-template data-testid="normal"
+  ><ino-segment-button>My Button</ino-segment-button></my-template
+>
+<my-template data-testid="checked"
+  ><ino-segment-button checked="true"
+    >My Button</ino-segment-button
+  ></my-template
+>
+<my-template data-testid="disabled"
+  ><ino-segment-button disabled="true"
+    >My Button</ino-segment-button
+  ></my-template
+>
