--- a/packages/elements-react-screenshot/src/styles.scss
+++ b/packages/elements-react-screenshot/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* .App {
+    width: 800px;
+    height: 600px;
+} */
+
+body {
+    margin: 0px;
+}
