--- a/packages/ui-patterns-playground/src/index.css
+++ b/packages/ui-patterns-playground/src/index.css
@@ -1,1 +1,6 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@import '@inovex.de/elements/dist/inovex-elements/inovex-elements.css';
 @import '@inovex.de/ui-patterns/dist/style.css';
