--- a/packages/landingpage/components/layout/header/desktop/header.desktop.module.scss
+++ b/packages/landingpage/components/layout/header/desktop/header.desktop.module.scss
@@ -1,11 +1,11 @@
 $header-height: 120px;
-$header-height--shrunk: 70px;
+$header-height--shrunk: 80px;
 
 // inspired by https://css-tricks.com/how-to-create-a-shrinking-header-on-scroll-without-javascript/
 .header {
   top: $header-height--shrunk - $header-height;
   position: sticky;
-  background-color: white;
+  background-color: var(--inovex-elements-white);
   z-index: 999;
   height: $header-height;
   display: flex;
@@ -29,15 +29,21 @@ $header-height--shrunk: 70px;
 
 .logo {
   grid-area: logo;
+  display: flex;
+  align-items: center;
 
   a {
-    display: flex;
-    gap: 8px;
-    align-items: center;
+    display: inline-block;
+    height: $header-height--shrunk - 15px;
+    margin: 5px;
+
+    img {
+      height: inherit;
+    }
   }
 
   p {
-    color: #003c7e;
+    color: var(--inovex-elements-p-5);
   }
 }
 
@@ -45,7 +51,7 @@ $header-height--shrunk: 70px;
   grid-area: language;
 
   div b {
-    color: #003c7e;
+    color: var(--inovex-elements-p-5);
     cursor: pointer;
     text-transform: uppercase;
     padding: 5px;
@@ -57,7 +63,7 @@ $header-height--shrunk: 70px;
     }
 
     &.selected {
-      color: #2c02ff;
+      color: var(--inovex-elements-p-5);
     }
   }
 }
