--- a/packages/elements/src/components/ino-select/ino-select.scss
+++ b/packages/elements/src/components/ino-select/ino-select.scss
@@ -7,6 +7,11 @@
 @use '../base/new-theme' as theme;
 @use '../ino-label/ino-label';
 
+// Tailwind CSS Preflight border-style countermeasures (https://tailwindcss.com/docs/preflight#border-styles-are-reset-globally)
+ino-select * {
+  border-style: none;
+}
+
 @include list.deprecated-core-styles;
 
 $not-outlined-select: 'not(.mdc-select--outlined)';
