feat: add routing navigation and improve DX

--- a/packages/ui-patterns-playground/src/index.css
+++ b/packages/ui-patterns-playground/src/index.css
@@ -4,3 +4,7 @@
 
 @import '@inovex.de/elements/dist/inovex-elements/inovex-elements.css';
 @import '@inovex.de/ui-patterns/dist/style.css';
+
+#root {
+  height: 100vh;
+}
