--- a/packages/landingpage/components/explore/explore-header.module.scss
+++ b/packages/landingpage/components/explore/explore-header.module.scss
@@ -1,6 +1,12 @@
 .container {
   display: flex;
   justify-content: space-between;
+
+  .image {
+    position: relative;
+    width: 461px;
+    height: 326px;
+  }
 }
 
 .claimContainer {
