feat(storybook) extracted css docs and added them to the template generator for each story

--- a/packages/elements/src/components/ino-nav-drawer/ino-nav-drawer.scss
+++ b/packages/elements/src/components/ino-nav-drawer/ino-nav-drawer.scss
@@ -10,17 +10,6 @@
 @include list.deprecated-core-styles;
 
 :host {
-  /**
-   * @prop --ino-nav-drawer-width-open: The width of the open drawer.
-   * @prop --ino-nav-drawer-width-closed: Docked variant only! The width of the collapsed drawer.
-   * @prop --ino-nav-drawer-mobile-width-open: Mobile variant only! The width of the open drawer.
-   * @prop --ino-nav-drawer-background: Background of the drawer.
-   * @prop --ino-nav-drawer-height: Height of the drawer.
-   * @prop --ino-nav-drawer-text-color: Color of text inside the drawer.
-   * @prop --ino-nav-drawer-transition-duration: Duration of the slide animation of the drawer.
-   * @prop --ino-nav-drawer-timing-function: Timing function of the slide animation of the drawer.
-  */
-
   --nav-drawer-width-open: var(--ino-nav-drawer-width-open, 250px);
   --nav-drawer-width-closed: var(--ino-nav-drawer-width-closed, 72px);
   --nav-drawer-mobile-width-open: var(
@@ -36,7 +25,7 @@
   );
   --nav-drawer-timing-function: var(
     --ino-nav-drawer-timing-function,
-    (0.4, 0, 0.2, 1)
+    cubic-bezier(0.4, 0, 0.2, 1)
   );
 
   display: flex;
