--- a/packages/elements/src/components/ino-progress-bar/ino-progress-bar.scss
+++ b/packages/elements/src/components/ino-progress-bar/ino-progress-bar.scss
@@ -4,12 +4,9 @@
 @use '../base/new-theme' as theme;
 
 :host {
-  /**
-   * @prop --progress-bar--bar-color: Color of the progress bar
-   */
-  --progress-bar--bar-color: #{theme.$p-5};
+  --ino-progress-bar-color: var(--progress-bar--bar-color, #{theme.$p-5});
 
   @include linear-progress.core-styles;
-  @include linear-progress.bar-color(var(--progress-bar--bar-color));
+  @include linear-progress.bar-color(var(--ino-progress-bar-color));
   @include linear-progress.buffer-color(theme.$n-2);
 }
